# specbook

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  zensical.toml
.github/workflows/: ci.yml  docs.yaml  release.yml
docs/: get-started.md  index.md  spec-driven-development.md  specbook-advanced.md  specbook-basic.md
docs/overrides/partials/: copyright.html
docs/stylesheets/: extra.css
src/specbook/: __main__.py  cli.py
src/specbook/core/: finder.py  models.py  server.py
src/specbook/ui/: console.py
src/specbook/ui/web/: app.py
src/specbook/ui/web/static/: site.webmanifest
src/specbook/ui/web/static/docs/: .gitkeep  404.html  index.html  search.json  sitemap.xml
src/specbook/ui/web/static/docs/get-started/: index.html
src/specbook/ui/web/static/docs/spec-driven-development/: index.html
src/specbook/ui/web/static/docs/specbook-advanced/: index.html
src/specbook/ui/web/static/docs/specbook-basic/: index.html
src/specbook/ui/web/templates/: index.html
tests/integration/: test_cli.py  test_web.py
tests/unit/: test_finder.py  test_server.py  test_web.py
