[project]
name = "specbook"
version = "0.0.2"
description = "Tool to collaborate on spec-driven development (SDD)"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
authors = [
    { name = "Christopher Correa" }
]
dependencies = [
    "typer>=0.9",
    "rich>=13",
    "starlette>=0.40",
    "uvicorn>=0.30",
    "jinja2>=3.1",
    "psutil>=5.9",
    "markdown-it-py>=3.0",
    "mdit-py-plugins>=0.4",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "pyright>=1.1",
    "ruff>=0.9",
    "httpx>=0.27",
    "zensical",
]

[project.scripts]
specbook = "specbook.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/specbook"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["src"]

[tool.coverage.run]
source = ["src/specbook"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["F", "E", "W", "I", "B"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
